feat : Modify all note organization

--- a/2 - Area/2.2 - Organisation/2.2 - Organisation.md
+++ b/2 - Area/2.2 - Organisation/2.2 - Organisation.md
@@ -2,7 +2,7 @@
 cssclasses:
   - wide-page
 type: directory-page
-category: "[[2.2 - Organisation]]"
+category: "[[2 - Area]]"
 ---
 
 
@@ -19,7 +19,7 @@ style: default
 actions:
   - type: templaterCreateNote
     templateFile: Templates/Note.md
-    folderPath: 2 - Area/2.2 - Organisation/Daily notes
+    folderPath: 2 - Area/2.2 - Organisation
     fileName: ""
     openNote: true
     openIfAlreadyExists: false
