--- a/2 - Area/2.4 - Activité/2.4 - Activité.md
+++ b/2 - Area/2.4 - Activité/2.4 - Activité.md
@@ -1,14 +1,10 @@
 ---
-cssclasses:
-type: directory-page
+cssclasses: 
+type: area-page
 category: "[[2 - Area]]"
 ---
-
-
-
-
 ```meta-bind-button
-label: New note
+label: New sub area
 icon: plus
 hidden: false
 class: ""
@@ -17,47 +13,18 @@ id: ""
 style: default
 actions:
   - type: templaterCreateNote
-    templateFile: Templates/Note.md
+    templateFile: Templates/Sub Area.md
     folderPath: 2 - Area/2.4 - Activité
     fileName: ""
     openNote: true
     openIfAlreadyExists: false
 
 ```
-## Todo
-
+# Sub Area
 ```dataview
-TASK
-WHERE startswith(file.folder, this.file.folder)
+List
+where contains(file.folder, this.file.folder)
+where !contains(file.folder, "4 - Archive")
+where contains(type, "sub-area")
+sort priority
 ```
-
-## Notes
-
-> [!multi-column]
-> 
->> Last modified
->>```dataview
->>List
->>FROM ""
->>WHERE contains(file.folder, this.file.folder)
->>WHERE type != "directory-page"
->>SORT file.mtime DESC
->>LIMIT 5
->>```
->
->> Last new
->>```dataview
->>List
->>FROM ""
->>WHERE contains(file.folder, this.file.folder)
->>WHERE type != "directory-page"
->>SORT file.ctime DESC
->>LIMIT 5
->>```
->
->> All
->>```dataview
->>LIST
->>WHERE contains(file.folder, this.file.folder)
->>WHERE type != "directory-page"
->>```
